styled the item blocks, and out values into the edit textboxes

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div class="container">
+      <div id="headertwo">
       <h1>bruh</h1>
+    </div>
       <main>
 
       </main>
