--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
   <title>Garage Sale</title>
   <link rel="stylesheet" href="main.css">
 </head>
-    <main></main>
-  </div>
+<body>
+    <main>
+    </main>
+
   <script src="https://unpkg.com/react@16/umd/react.development.js"crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
