--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
    <!--Import materialize.css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <meta charset="utf-8">
-  <title>Garage Sale</title>
+  <title>Infinite Savannah</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
