--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,7 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <main>
-    </main>
-
+    <main></main>
   <script src="https://unpkg.com/react@16/umd/react.development.js"crossorigin></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
